<resources>
    <string name="app_name">Warshop.id</string>
    <string name="email">Email</string>
    <string name="Password">Kata Sandi</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="menu">menu</string>
    <string name="beranda">Home</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_location">My Location</string>
    <string name="adam_alfarizi">Adam Alfarizi</string>
    <string name="About">About</string>
    <string name="History">History</string>
    <string name="Settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="Support">Support</string>
    <string name="Logout">Logout</string>
    <string name="Transaction">Transaction</string>
    <string name="warung1">Warung Haji Nawi</string>
    <string name="welcome_word">Selamat Datang,</string>
    <string name="prolog_word">Ini adalah beberapa warung yang cocok.</string>
    <string name="alamat_slide_1">Jl. Indramayu No. 30 Jatinegara, Jakarta Timur, DKI Jakarta</string>
    <string name="Home">Home</string>
    <string name="terakhir_kali">Terakhir Kali</string>
    <string name="Rekomendasi">Rekomendasi</string>
    <string name="Title">Title</string>
    <string name="alamat">Alamat</string>
    <string name="pesan">Pesan</string>
    <string name="Pulsa">Pulsa</string>
    <string name="Voucher">Voucher</string>
    <string name="eMoney">E-Money</string>
    <string name="back_button">Back Button</string>
    <string name="Warshop">Warshop.ID</string>
    <string name="fullusername">Full Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="icon">icon</string>
    <string name="fullname">Fullname</string>
    <string name="repassword">Validate Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="rating">Rating</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="rp">Rp. </string>
    <string name="harga">harga</string>
    <string name="aqua_galon">Aqua Galon</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="details">Details</string>
</resources>