<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/History" />

        <item
            android:id="@+id/nav_transaction"
            android:title="@string/Transaction" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/About" />
    </group>

    <item tools:ignore="MenuTitle">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/Logout" />
                <item
                    android:id="@+id/nav_support"
                    android:title="@string/Support" />
            </group>
        </menu>
    </item>



</menu>