<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/warshop_id"
        android:contentDescription="@string/icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="190dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/fullusername"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/email_user"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:hint="@string/phone"
            android:layout_gravity="center"
            android:importantForAutofill="no"
            android:inputType="phone"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/reg_password"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/Password"
            android:layout_gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/repassword"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            tools:ignore="MissingConstraints" />

    </LinearLayout>




</RelativeLayout>