<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityScreen.DetailBarang">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#1C84F4"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="72dp"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:src="@drawable/back"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:text="@string/details"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#ffffff"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/bg_profile"/>


        </RelativeLayout>

    </RelativeLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/aqua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/namabarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aqua_galon"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="460dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="515dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#000000"
        android:textSize="30sp"
        android:text="@string/rp"/>

    <TextView
        android:id="@+id/hargabarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="515dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        android:layout_marginStart="90dp"
        android:background="@drawable/bg_buy"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/add_to_cart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>