<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:background="@drawable/bg_login"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_wave"
            tools:ignore="ContentDescription,MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:hint="@string/fullname"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/id_password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_input"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/Password"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/remember_me_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat_regular"/>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btnlogin"
        android:text="@string/login"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dont Have a Account ? Please Register Down Below"
        android:layout_gravity="center"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:textSize="16sp"
        android:background="@drawable/bg_btnlogin"
        android:fontFamily="@font/montserrat_bold"
        tools:ignore="MissingConstraints" />

</LinearLayout>