<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="120dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/barang_list"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/name_barang_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/nama_barang"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/rp"/>

        <TextView
            android:id="@+id/price_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="15sp"
            android:textColor="#000000"
            android:text="@string/harga"/>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_buy">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/plus"/>

        </RelativeLayout>

    </RelativeLayout>




</androidx.cardview.widget.CardView>