<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HalamanUtama"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/navTheme"
        android:background="#335CA2"
        android:layout_gravity="start"
        app:menu="@menu/slide_menu_left"
        app:itemTextAppearance="@style/TextViewStyle"
        app:itemHorizontalPadding="90dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:title="@string/Home"/>

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="290dp"
                    android:padding="20dp"
                    android:fitsSystemWindows="true"
                    android:background="@drawable/bg_header" >

                    <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:id="@+id/collapsing_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                        app:title="@string/Home">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_black"
                                android:text="@string/welcome_word"
                                android:textColor="#ffffff"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/id_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="289dp"
                                android:fontFamily="@font/montserrat_black"
                                android:textColor="#ffffff"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="39dp"
                                android:fontFamily="@font/montserrat_regular"
                                android:text="@string/prolog_word"
                                android:textColor="#ffffff"
                                android:textSize="10sp"
                                tools:ignore="SmallSp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="210dp"
                            android:layout_marginTop="114dp">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/featured_slider"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="20dp"
                                android:layout_marginBottom="20dp" />

                        </RelativeLayout>


                    </com.google.android.material.appbar.CollapsingToolbarLayout>

                </com.google.android.material.appbar.AppBarLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:id="@+id/menu_icon"
                        android:layout_width="25dp"
                        android:layout_height="26dp"
                        android:src="@drawable/logo_slide_menu"
                        android:contentDescription="@string/menu"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.073"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.022"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/beranda"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:layout_marginStart="55dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="MissingConstraints,UnknownId" />

                    <ImageView
                        android:id="@+id/chat_btn"
                        android:layout_width="23dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="325dp"
                        android:layout_marginTop="1.5dp"
                        android:background="@drawable/chat_logo"
                        android:contentDescription="@string/chat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.845"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.002"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/notification_btn"
                        android:layout_width="19dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="365dp"
                        android:background="@drawable/notifications_logo"
                        android:contentDescription="@string/notifications"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.933"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.026"
                        tools:ignore="MissingConstraints" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="353dp"
                    android:layout_marginStart="20dp"
                    >

                    <LinearLayout
                        android:id="@+id/btn_pesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/pesan"
                                android:layout_centerInParent="true"/>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/pesan"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_emoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="90dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_2"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/credit"
                                android:layout_centerInParent="true"/>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/eMoney"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_voucher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="180dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_3"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/voucher"
                                android:layout_centerInParent="true"/>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/Voucher"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_pulsa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="270dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/card_4"
                            android:elevation="8dp"
                            android:layout_margin="10dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/phone"
                                android:layout_centerInParent="true"/>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/Pulsa"/>

                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="470dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="9dp"
                        android:text="@string/terakhir_kali"
                        android:textSize="20sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="#000000"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/lt_slider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="39dp"
                        android:layout_marginStart="18dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="763dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="9dp"
                        android:text="@string/Rekomendasi"
                        android:textSize="20sp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="#000000"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recommendation_slider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="39dp"
                        android:layout_marginStart="18dp" />

                </RelativeLayout>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </ScrollView>

    </RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>